Fix more contrast errors

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -356,7 +356,7 @@ input {
 #forum-list h3 {
     font-size: var(--larger-padding);
     font-weight: bold;
-    color: var(--dark-color);
+    color: #fff;
     margin: .5rem 0;
 }
 
@@ -453,7 +453,7 @@ input {
 }
 
 .replies {
-    background-color: var(--light-color);
+    background-color: var(--dark-color);
     border-radius: 10px;
     color: #fff;
     padding: .5rem;
@@ -489,13 +489,13 @@ input {
 }
 
 .mlm-link {
-    color: var(--light-color);
+    color: var(--dark-color);
 }
 
 .view-comments {
-    background-color: var(--light-color);
+    background-color: var(--dark-color);
     border-radius: 10px;
-    color: var(--dark-color);
+    color: #fff;
     display: inline-block;
     margin-top: var(--lg-padding);
     padding: .5rem;
@@ -623,6 +623,15 @@ input {
 .admin-tables td {
     border: 3px solid var(--dark-color);
     padding: .5rem;
+}
+
+#delete-mlm,
+#edit-mlm,
+#edit-post,
+#delete-post,
+#delete-user,
+#edit-user {
+    color: #000;
 }
 
 /***** New MLM *****/
